--- a/ApiGateaway/src/main/resources/application.properties
+++ b/ApiGateaway/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=ApiGateaway
+server.port = 8082
+spring.main.web-application-type=reactive
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
