--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,12 @@
     <module>ApiGateaway</module>
     <module>EurekaDiscoveryServer</module>
     <module>UserAuthenticationService</module>
+    <module>RestaurantService</module>
   </modules>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <spring-cloud.version>2023.0.2</spring-cloud.version>
 
   </properties>
 
@@ -34,6 +36,12 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+      <version>2.1.0</version>
     </dependency>
 
     <dependency>
@@ -48,6 +56,17 @@
   </dependencies>
 
   <dependencyManagement>
+
+
+      <dependencies>
+        <dependency>
+          <groupId>org.springframework.cloud</groupId>
+          <artifactId>spring-cloud-dependencies</artifactId>
+          <version>${spring-cloud.version}</version>
+          <type>pom</type>
+          <scope>import</scope>
+        </dependency>
+      </dependencies>
 
   </dependencyManagement>
 </project>
