--- a/UserAuthenticationService/src/main/resources/application.properties
+++ b/UserAuthenticationService/src/main/resources/application.properties
@@ -1,4 +1,12 @@
 spring.application.name=UserAuthenticationService
+
 server.port = 8081
+
+spring.datasource.url=jdbc:mysql://localhost:3306/CapstoneCustomer
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
