expiration of Token updated

--- a/BackEnd/UserAuthenticationService/src/main/resources/application.properties
+++ b/BackEnd/UserAuthenticationService/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.show-sql=true
 
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
+logging.level.org.springframework=info
+logging.level.com.example.UserAuthenticationService=debug
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
