--- a/BackEnd/customersapiservice/src/main/resources/application.properties
+++ b/BackEnd/customersapiservice/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.data.mongodb.uri = mongodb://localhost:27017/customerCapstoneDB
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
+logging.level.org.springframework=info
+logging.level.com.bej.customersapiservice=debug
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
