--- a/BackEnd/customersapiservice/src/main/resources/application.properties
+++ b/BackEnd/customersapiservice/src/main/resources/application.properties
@@ -8,3 +8,11 @@ eureka.client.fetch-registry=true
 logging.level.org.springframework=info
 logging.level.com.bej.customersapiservice=debug
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
+
+#Email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=yourdishdash@gmail.com
+spring.mail.password=bsgz osbj jaef tidm
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
