cart service, updated FavRestaurant

--- a/BackEnd/customersapiservice/src/main/resources/application.properties
+++ b/BackEnd/customersapiservice/src/main/resources/application.properties
@@ -1,10 +1,16 @@
 spring.application.name=customersapiservice
 server.port=8083
+
+#mongoDb
 server.error.include-message=always
 spring.data.mongodb.uri = mongodb://localhost:27017/customerCapstoneDB
+
+#Eureka
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
+
+#Logger
 logging.level.org.springframework=info
 logging.level.com.bej.customersapiservice=debug
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
