--- a/BackEnd/cart-service-api/pom.xml
+++ b/BackEnd/cart-service-api/pom.xml
@@ -8,9 +8,9 @@
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 	<groupId>com.bej</groupId>
-	<artifactId>cart-api-service</artifactId>
+	<artifactId>cart-service-api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>cart-api-service</name>
+	<name>cart-service-api</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
