address updation and deltion done

--- a/BackEnd/customersapiservice/src/main/resources/application.properties
+++ b/BackEnd/customersapiservice/src/main/resources/application.properties
@@ -22,3 +22,8 @@ spring.mail.username=yourdishdash@gmail.com
 spring.mail.password=bsgz osbj jaef tidm
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
+
+project.image=images/
