--- a/FrontEnd/DishDash/package.json
+++ b/FrontEnd/DishDash/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^18.0.0",
     "bootstrap": "^5.3.3",
     "ngx-cookie-service": "^18.0.0",
+    "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "uuid": "^10.0.0",
