--- a/FrontEnd/DishDash/angular.json
+++ b/FrontEnd/DishDash/angular.json
@@ -34,7 +34,8 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+               "src/assets"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
@@ -93,8 +94,9 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
-              }
+                "input": "public" 
+              },
+               "src/assets"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
