order service completed

--- a/BackEnd/pom.xml
+++ b/BackEnd/pom.xml
@@ -23,7 +23,7 @@
     <module>UserAuthenticationService</module>
     <module>RestaurantService</module>
     <module>customersapiservice</module>
-    <module>cart-service-api</module>
+    <module>order-service-api</module>
   </modules>
 
   <properties>
