--- a/FrontEnd/DishDash/angular.json
+++ b/FrontEnd/DishDash/angular.json
@@ -34,7 +34,10 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              
+              "src/assets"
+              
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
@@ -94,7 +97,8 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              "src/assets"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
