profile picture updated

--- a/BackEnd/customersapiservice/src/main/resources/application.properties
+++ b/BackEnd/customersapiservice/src/main/resources/application.properties
@@ -26,4 +26,4 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
 
-project.image=images/
+spring.servlet.multipart.location=C:/Niit/Major_Capstone_project/major-capstone-project/major-capstone-project/FrontEnd/DishDash/src/assets/images
