--- a/BackEnd/order-service-api/src/main/resources/application.properties
+++ b/BackEnd/order-service-api/src/main/resources/application.properties
@@ -15,5 +15,13 @@ logging.level.org.springframework=info
 logging.level.com.bej.cart-api-service=debug
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 
+#Email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=yourdishdash@gmail.com
+spring.mail.password=bsgz osbj jaef tidm
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 
 
